--- a/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
@@ -40,11 +40,13 @@
             android:textSize="@dimen/_16ssp" />
     </LinearLayout>
 
-    <ScrollView
+
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         android:scrollbars="none">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -353,57 +355,50 @@
                 app:cardCornerRadius="@dimen/_10sdp"
                 android:visibility="visible">
 
-                <androidx.core.widget.NestedScrollView
-                    android:id="@+id/nestedSV"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/pendingTV"
-                            android:layout_width="match_parent"
-                            android:layout_height="27dp"
-                            android:layout_marginTop="@dimen/_14sdp"
-                            android:background="#f2f4f5"
-                            android:fontFamily="@font/opensans_bold"
-                            android:gravity="center_vertical"
-                            android:paddingLeft="15dp"
-                            android:text="Pending"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/text_size_14sp"
-                            android:visibility="gone" />
+<!--                        <TextView-->
+<!--                            android:id="@+id/pendingTV"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="27dp"-->
+<!--                            android:layout_marginTop="@dimen/_14sdp"-->
+<!--                            android:background="#f2f4f5"-->
+<!--                            android:fontFamily="@font/opensans_bold"-->
+<!--                            android:gravity="center_vertical"-->
+<!--                            android:paddingLeft="15dp"-->
+<!--                            android:text="Pending"-->
+<!--                            android:textColor="@color/primary_black"-->
+<!--                            android:textSize="@dimen/text_size_14sp"-->
+<!--                            android:visibility="gone" />-->
+<!--                        <LinearLayout-->
+<!--                            android:id="@+id/layoutLLPending"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginTop="@dimen/_10sdp"-->
+<!--                            android:orientation="vertical"-->
+<!--                            android:visibility="gone">-->
 
+<!--                            <androidx.cardview.widget.CardView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:layout_marginBottom="@dimen/_2sdp"-->
+<!--                                app:cardCornerRadius="@dimen/_10sdp">-->
 
-                        <LinearLayout
-                            android:id="@+id/layoutLLPending"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_10sdp"
-                            android:orientation="vertical"
-                            android:visibility="gone">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/_2sdp"
-                                app:cardCornerRadius="@dimen/_10sdp">
-
-                                <com.greenbox.coyni.utils.ExpandableHeightRecyclerView
-                                    android:id="@+id/transactionListPendingRV"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="10dp"
-                                    android:clipToPadding="false"
-                                    android:divider="@color/white"
-                                    android:nestedScrollingEnabled="false"
-                                    android:overScrollMode="never"
-                                    android:scrollbars="none" />
-                            </androidx.cardview.widget.CardView>
-                        </LinearLayout>
+<!--                                <com.greenbox.coyni.utils.ExpandableHeightRecyclerView-->
+<!--                                    android:id="@+id/transactionListPendingRV"-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:layout_marginTop="10dp"-->
+<!--                                    android:clipToPadding="false"-->
+<!--                                    android:divider="@color/white"-->
+<!--                                    android:nestedScrollingEnabled="false"-->
+<!--                                    android:overScrollMode="never"-->
+<!--                                    android:scrollbars="none" />-->
+<!--                            </androidx.cardview.widget.CardView>-->
+<!--                        </LinearLayout>-->
 
                         <LinearLayout
                             android:id="@+id/layoutLLposted"
@@ -433,15 +428,13 @@
                             android:textColor="@color/dark_grey"
                             android:textSize="@dimen/_10ssp"
                             android:layout_margin="@dimen/_50sdp"
-                            android:visibility="visible" />
+                            android:visibility="gone" />
                         <ProgressBar
                             android:id="@+id/progressBarLoadMore"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:visibility="gone" />
                     </LinearLayout>
-                </androidx.core.widget.NestedScrollView>
-
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -458,7 +451,6 @@
                 android:visibility="visible" />
 
         </LinearLayout>
-    </ScrollView>
 
-
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
