--- a/app/src/main/res/layout/activity_pay_to_merchant.xml
+++ b/app/src/main/res/layout/activity_pay_to_merchant.xml
@@ -49,16 +49,16 @@
         </LinearLayout>
 
 
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <LinearLayout
                 android:id="@+id/layoutLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:layout_above="@id/ckb"
+                android:layout_alignParentTop="true"
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
@@ -78,9 +78,9 @@
                         android:id="@+id/userProfileIV"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@drawable/acct_profile"
                         android:contentDescription="@string/businessProfileAccountItemChildImage"
                         android:scaleType="fitXY"
-                        android:background="@drawable/acct_profile"
                         android:visibility="visible" />
 
                     <TextView
@@ -94,49 +94,47 @@
                         android:visibility="gone" />
                 </androidx.cardview.widget.CardView>
 
-                <LinearLayout
+
+                <TextView
+                    android:id="@+id/merchantyNameTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_11sdp"
                     android:layout_marginStart="@dimen/_11sdp"
+                    android:layout_marginTop="@dimen/_11sdp"
+                    android:gravity="center"
+                    android:singleLine="true"
                     android:layout_marginEnd="@dimen/_11sdp"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal">
+                    android:fontFamily="@font/opensans_semibold"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_14ssp" />
 
-                    <TextView
-                        android:id="@+id/merchantyNameTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_14ssp" />
-
-                    <TextView
-                        android:id="@+id/merchantTypeTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_5sdp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:textColor="@color/dark_grey"
-                        android:textSize="@dimen/_11ssp" />
-                </LinearLayout>
-
-                <LinearLayout
+                <TextView
+                    android:id="@+id/merchantTypeTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:fontFamily="@font/opensans_semibold"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:singleLine="true"
+                    android:textColor="@color/dark_grey"
+                    android:textSize="@dimen/_11ssp" />
 
-                    <TextView
-                        android:id="@+id/accountAddress"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_1sdp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:textColor="@color/dark_grey"
-                        android:textSize="@dimen/_11ssp" />
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:gravity="center"-->
+<!--                    android:orientation="horizontal">-->
 
-                </LinearLayout>
+<!--                    <TextView-->
+<!--                        android:id="@+id/accountAddress"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="@dimen/_1sdp"-->
+<!--                        android:fontFamily="@font/opensans_semibold"-->
+<!--                        android:textColor="@color/dark_grey"-->
+<!--                        android:textSize="@dimen/_11ssp" />-->
+
+<!--                </LinearLayout>-->
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
