--- a/app/src/main/res/layout/activity_pay_to_merchant.xml
+++ b/app/src/main/res/layout/activity_pay_to_merchant.xml
@@ -48,17 +48,16 @@
                 android:textSize="@dimen/_16ssp" />
         </LinearLayout>
 
-
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <LinearLayout
                 android:id="@+id/layoutLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:layout_above="@id/ckb"
+                android:layout_alignParentTop="true"
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
@@ -78,9 +77,9 @@
                         android:id="@+id/userProfileIV"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@drawable/acct_profile"
                         android:contentDescription="@string/businessProfileAccountItemChildImage"
                         android:scaleType="fitXY"
-                        android:background="@drawable/acct_profile"
                         android:visibility="visible" />
 
                     <TextView
@@ -97,8 +96,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_11sdp"
                     android:layout_marginStart="@dimen/_11sdp"
+                    android:layout_marginTop="@dimen/_11sdp"
                     android:layout_marginEnd="@dimen/_11sdp"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
@@ -157,6 +156,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_12sdp"
                             android:background="@color/white"
+                            android:gravity="center"
                             android:paddingStart="@dimen/_20sdp"
                             android:paddingEnd="@dimen/_30sdp">
 
@@ -197,6 +197,7 @@
                                     android:textColor="@color/primary_black"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursorcolor"
+                                    android:textDirection="rtl"
                                     android:textSize="@dimen/_53ssp" />
 
 
@@ -210,7 +211,6 @@
                                     android:textSize="@dimen/_12ssp"
                                     android:visibility="visible" />
                             </LinearLayout>
-
 
                             <ImageView
                                 android:id="@+id/imageConvertIV"
@@ -229,7 +229,6 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginLeft="@dimen/_10sdp"
-                            android:layout_marginTop="@dimen/_10sdp"
                             android:layout_marginRight="@dimen/_10sdp"
                             android:text="Amount entered exceeds your daily limit"
                             android:textColor="@color/error"
