Dahboard and switching account bug fixes.

--- a/app/src/main/res/layout/business_profile_accounts_item.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/_9sdp"
         android:layout_marginStart="@dimen/_15ssp"
+        android:layout_marginEnd="@dimen/_15ssp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
@@ -54,17 +55,30 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_60sdp"
             android:layout_weight="0.3"
-            android:singleLine="true"
             android:fontFamily="@font/opensans_semibold"
             android:padding="@dimen/_10sdp"
             android:text=""
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp" />
+
+        <TextView
+            android:id="@+id/statusTV"
+            android:layout_width="@dimen/_68sdp"
+            android:layout_height="@dimen/_14sdp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/txn_pending_bg"
+            android:fontFamily="@font/opensans_bold"
+            android:gravity="center"
+            android:text=""
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:textColor="@color/orange_status"
+            android:visibility="gone"
+            android:textSize="@dimen/_7ssp" />
 
         <ImageView
             android:id="@+id/tickIcon"
@@ -73,7 +87,7 @@
             app:tint="@color/primary_green"
             android:layout_gravity="center"
             android:visibility="gone"
-            android:layout_marginEnd="@dimen/_25sdp"
+            android:layout_marginEnd="@dimen/_16sdp"
             android:contentDescription="@string/businessProfileAccountExpandDownArrow"
             android:src="@drawable/ic_custom_tick" />
 
@@ -84,7 +98,7 @@
             android:visibility="visible"
             android:padding="@dimen/_2sdp"
             android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/_25sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:contentDescription="@string/businessProfileAccountExpandDownArrow"
             android:src="@drawable/ic_down" />
 
