--- a/app/src/main/res/layout/activity_company_info_details.xml
+++ b/app/src/main/res/layout/activity_company_info_details.xml
@@ -165,6 +165,7 @@
                         </LinearLayout>
 
                         <ImageView
+                            android:id="@+id/emailIconIV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -211,6 +212,7 @@
                         </LinearLayout>
 
                         <ImageView
+                            android:id="@+id/phoneIconIV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
