--- a/app/src/main/res/layout/default_account_dialog.xml
+++ b/app/src/main/res/layout/default_account_dialog.xml
@@ -25,100 +25,106 @@
             android:layout_marginBottom="@dimen/_70sdp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/profileview"
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <ExpandableListView
-                    android:id="@+id/business_profile_accounts_expandable_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="@dimen/_15sdp"
-                    android:divider="@null"
-                    android:groupIndicator="@null"
-                    android:visibility="visible" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_4sdp"
-                    android:background="#F6F9FE" />
-
+                android:layout_height="wrap_content"
+                android:fillViewport="true">
                 <LinearLayout
-                    android:id="@+id/profileLL"
+                    android:id="@+id/profileview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/profile_account_profile_image"
-                        android:layout_width="@dimen/_35sdp"
-                        android:layout_height="@dimen/_35sdp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="@dimen/_12sdp"
-                        android:layout_marginTop="@dimen/_10ssp"
-                        android:layout_marginBottom="@dimen/_10ssp"
-                        app:cardBackgroundColor="@color/white"
-                        app:cardCornerRadius="@dimen/_18sdp"
-                        app:layout_constraintStart_toEndOf="@+id/title"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+                    <ExpandableListView
+                        android:id="@+id/business_profile_accounts_expandable_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="@dimen/_15sdp"
+                        android:divider="@null"
+                        android:groupIndicator="@null"
+                        android:visibility="visible" />
 
-                        <ImageView
-                            android:id="@+id/profile_img"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:contentDescription="@string/businessProfileAccountItemChildImage"
-                            android:scaleType="fitXY"
-                            android:src="@color/light_gray"
-                            android:visibility="visible" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_4sdp"
+                        android:background="#F6F9FE" />
+
+                    <LinearLayout
+                        android:id="@+id/profileLL"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/profile_account_profile_image"
+                            android:layout_width="@dimen/_35sdp"
+                            android:layout_height="@dimen/_35sdp"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/_12sdp"
+                            android:layout_marginTop="@dimen/_10ssp"
+                            android:layout_marginBottom="@dimen/_10ssp"
+                            app:cardBackgroundColor="@color/white"
+                            app:cardCornerRadius="@dimen/_18sdp"
+                            app:layout_constraintStart_toEndOf="@+id/title"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <ImageView
+                                android:id="@+id/profile_img"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:contentDescription="@string/businessProfileAccountItemChildImage"
+                                android:scaleType="fitXY"
+                                android:src="@color/light_gray"
+                                android:visibility="visible" />
+
+                            <TextView
+                                android:id="@+id/b_imageTextTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:fontFamily="@font/opensans_bold"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_20sdp"
+                                android:visibility="gone" />
+                        </androidx.cardview.widget.CardView>
 
                         <TextView
-                            android:id="@+id/b_imageTextTV"
+                            android:id="@+id/defualt_account_dialog_personal_name"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_15sdp"
+                            android:layout_marginEnd="@dimen/_10ssp"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:text=""
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_11sdp" />
+
+                        <ImageView
+                            android:id="@+id/tickIcon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:fontFamily="@font/opensans_bold"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_20sdp"
-                            android:visibility="gone" />
-                    </androidx.cardview.widget.CardView>
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="@dimen/_5sdp"
+                            android:src="@drawable/ic_custom_tick"
+                            android:visibility="gone"
+                            app:tint="@color/primary_green" />
 
-                    <TextView
-                        android:id="@+id/defualt_account_dialog_personal_name"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_15sdp"
-                        android:layout_marginEnd="@dimen/_10ssp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:text=""
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_11sdp" />
+                    </LinearLayout>
 
-                    <ImageView
-                        android:id="@+id/tickIcon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="@dimen/_5sdp"
-                        android:src="@drawable/ic_custom_tick"
-                        android:visibility="gone"
-                        app:tint="@color/primary_green" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_4sdp"
+                        android:background="#F6F9FE" />
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_4sdp"
-                    android:background="#F6F9FE" />
-
-            </LinearLayout>
+            </androidx.core.widget.NestedScrollView>
         </LinearLayout>
 
         <LinearLayout
