--- a/app/src/main/res/layout/activity_first_tym_fail.xml
+++ b/app/src/main/res/layout/activity_first_tym_fail.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/_21sdp">
+    android:padding="@dimen/_21sdp"
+    android:background="@color/white">
 
 
     <ImageView
