--- a/app/src/main/res/layout/seekbar_with_floating_text.xml
+++ b/app/src/main/res/layout/seekbar_with_floating_text.xml
@@ -3,20 +3,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_floating_text"
+    <LinearLayout
+        android:id="@+id/tv_floating_text_LL"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/opensans_bold"
-        android:textColor="@color/primary_black"
-        android:singleLine="true"
-        android:textSize="@dimen/_9ssp" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_floating_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_bold"
+            android:textColor="@color/primary_black"
+            android:singleLine="true"
+            android:textSize="@dimen/_9ssp"
+            />
+
+        <TextView
+            android:id="@+id/tv_floating_text_currency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_bold"
+            android:textColor="@color/primary_black"
+            android:singleLine="true"
+            android:text=""
+            android:textSize="@dimen/_7ssp"
+            />
+    </LinearLayout>
+
 
     <SeekBar
         android:id="@+id/seekbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_floating_text"
+        android:layout_below="@+id/tv_floating_text_LL"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="@dimen/_35sdp"
         android:progressBackgroundTint="@color/light_gray"
