--- a/app/src/main/res/layout/activity_add_external_bank_acc.xml
+++ b/app/src/main/res/layout/activity_add_external_bank_acc.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -10,7 +9,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/_5sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -88,7 +88,8 @@
                 android:layout_alignParentBottom="true"
                 android:gravity="center"
                 app:cardBackgroundColor="@color/primary_green"
-                app:cardCornerRadius="@dimen/_22sdp">
+                app:cardCornerRadius="@dimen/_22sdp"
+                app:cardElevation="0dp">
 
                 <TextView
                     android:id="@+id/tvHead"
