--- a/app/src/main/res/layout/activity_business_application_approved.xml
+++ b/app/src/main/res/layout/activity_business_application_approved.xml
@@ -45,7 +45,7 @@
                     android:id="@+id/noteTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:fontFamily="@font/opensans_regular"
                     android:text=""
                     android:textColor="@color/primary_black"
