--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -644,6 +644,7 @@
                                     android:orientation="horizontal">
 
                                     <TextView
+                                        android:id="@+id/actionTV"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/opensans_semibold"
