--- a/app/src/main/res/layout/latest_txn_item.xml
+++ b/app/src/main/res/layout/latest_txn_item.xml
@@ -58,9 +58,10 @@
 
         <TextView
             android:id="@+id/amountTV"
-            android:layout_width="@dimen/_80sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_marginStart="@dimen/_5sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="-100,0000,000"
             android:textColor="@color/primary_black"
