--- a/app/src/main/res/layout/posted_inner_item.xml
+++ b/app/src/main/res/layout/posted_inner_item.xml
@@ -50,9 +50,10 @@
 
             <TextView
                 android:id="@+id/amountTV"
-                android:layout_width="@dimen/_80sdp"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
+                android:layout_marginStart="@dimen/_5sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="right"
                 android:singleLine="true"
